--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,9 @@ nav{
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+	align-items: center;
 	padding: 1vw 8vw;
+	box-shadow: 2px 2px 10px rgb(159, 90, 0);
 }
 
 nav img{
@@ -54,7 +56,24 @@ nav .navigation ul li a{
 	color: rgb(159, 90, 0);
 	font-size: 16px;
 	font-weight: 500;
+	transition: 0.3s ease;
 }
 nav .navigation ul li a:hover{
 	color:rgb(56, 29, 0)
+}
+
+/* Home */
+
+#Home{
+	background-image: linear-gradient(rgb(9, 5, 54, 0.3), rgb(5, 4, 46, 0.7)), url("images/mainCoffeePic.png");
+	width: 100%;
+	height: 100vh;
+	background-size: cover;
+	background-position: center; 
+}
+.text{
+	color: white;
+}
+.maintext{
+	color:white;
 }
