--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+@font-face {
+	font-family: dancing-c;
+	src: url(fonts/DancingScript-VariableFont_wght.ttf);
+}
 
 body{
 	font-family: 'Poppins', sans-serif;
@@ -27,12 +31,15 @@ h6 {
 
 /* Navigation */
 nav{
+	position: fixed;
+	width: 100%;
+	background-color: #fff;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
 	padding: 1vw 8vw;
-	box-shadow: 2px 2px 10px rgb(159, 90, 0);
+	box-shadow: 2px 2px 10px rgba(255, 153, 0, 0.882);
 }
 
 nav img{
@@ -59,7 +66,7 @@ nav .navigation ul li a{
 	transition: 0.3s ease;
 }
 nav .navigation ul li a:hover{
-	color:rgb(56, 29, 0)
+	color:rgb(56, 29, 0);
 }
 
 /* Home */
@@ -70,10 +77,92 @@ nav .navigation ul li a:hover{
 	height: 100vh;
 	background-size: cover;
 	background-position: center; 
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	padding-top: 40px;
 }
-.text{
-	color: white;
+#Home p{
+	width: 50%;
+	color: #fff;
+	font-size: 0.9rem;
+	line-height: 25px;
 }
-.maintext{
-	color:white;
+#Home h2{
+	font-size: 2.2rem;
+	letter-spacing: 1px;
+	font-family: dancing-c;
+	color:#fff;
+}
+#Home .btn{
+	margin-top: 30px;
+}
+#Home a{
+	text-decoration: none;
+	font-size: 0.9rem;
+	padding: 13px 35px;
+	background-color: rgb(151, 119, 30);
+	font-weight: 600;
+	border-radius: 30px;
+
+}
+#Home a.blue{
+	color: #fff;
+	background: rgb(122, 63, 1);
+	transition: 0.5s ease;
+}
+
+#Home a.blue:hover{
+	color: rgb(159, 90, 0);
+	background: #fff;
+}
+#Home a.yellow{
+	color: #fff;
+	background: rgb(122, 63, 1);
+	transition: 0.5s ease;
+}
+
+#Home a.yellow:hover{
+	color: rgb(159, 90, 0);
+	background: #fff;
+}
+
+/* features */
+
+#features{
+	padding: 5vw 8vw 0 8vw;
+	text-align: center;
+}
+#features .fea-base{
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+	grid-gap: 1rem;
+	margin-top: 50px;
+}
+
+#features h1{
+	color: rgb(98, 50, 0);
+}
+#features .fea-box {
+	background: #f9f9ff;
+	text-align: start;
+}
+
+#features .fea-box i{
+	font-size: 2.3rem;
+	color: rgb(75, 80, 44);
+}
+#features .fea-box h3{
+	font-size: 1.2rem;
+	font-weight: 600;
+	color:rgb(98, 50, 0);
+	padding: 13px 0 7px 0;
+}
+
+#features .fea-box p{
+	font-size: 1.rem;
+	font-weight: 400;
+	color:rgb(70,70,87);
 }
