--- a/styles.css
+++ b/styles.css
@@ -214,3 +214,83 @@ nav .navigation ul li a:hover{
 	right: 15px;
 	bottom: 10px;
 }
+
+/*registration*/
+
+#registration{
+	padding: 6vw 9vw 6vw 8vw;
+	background-image: linear-gradient(rgb(9, 5, 54, 0.3), rgb(5, 4, 46, 0.7)), url("images/mainPic2.jpg");
+	width: 100%;
+	height: 100%;
+	background-size: cover;
+	background-position: center;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+#registration .reminder{
+	color: #fff;
+
+}
+#registration .reminder h1{
+	color: #fff;
+}
+#registration .reminder .time{
+	display: flex;
+	margin-top: 40px;
+}
+#registration .reminder .time .date{
+	text-align: center;
+	padding: 13px 33px;
+	background: rgba(255, 255, 255, 0.5);
+	backdrop-filter: blur(4px);
+	box-shadow: 0 8px 32px 0 rgba(255, 153, 0, 0.882);
+	border-radius: 10px;
+	margin: 0 5px 10px 5px;
+	border: 1px solid rgba(255, 153, 0, 0.882);
+	font-size: 1.1rem;
+	font-weight: 600;
+}
+
+#registration .form{
+	background: #fff;
+	border-radius: 8px;
+	display: flex;
+	flex-direction: column;
+	padding: 40px;
+	box-shadow: 0 8px 32px 0 rgba(255, 153, 0, 0.882);
+
+}
+
+#registration .form input{
+	margin: 15px 0;
+	padding: 15px 10px;
+	border: 1px solid rgba(255, 153, 0, 0.882);
+	outline: none;
+}
+#registration .form input::placeholder{
+	color: #413c3c;
+	font-weight: 500;
+	font-size: 0.9rem;
+}
+#registration .form .btn{
+	margin-top: 20px;
+	margin-left: 16px;
+}
+#registration .form a.blue{
+	text-decoration: none;
+	font-size: 0.9rem;
+	padding: 13px 35px;
+	background-color: rgb(151, 119, 30);
+	font-weight: 600;
+	border-radius: 30px;
+	color: #fff;
+	background: rgb(122, 63, 1);
+	transition: 0.5s ease;
+}
+
+#registration .form a.blue:hover{
+	color: rgb(159, 90, 0);
+	background: #fff;
+}
