--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ nav{
 	align-items: center;
 	padding: 1vw 8vw;
 	box-shadow: 2px 2px 10px rgba(255, 153, 0, 0.882);
+	z-index: 1090000;
 }
 
 nav img{
@@ -293,4 +294,46 @@ nav .navigation ul li a:hover{
 #registration .form a.blue:hover{
 	color: rgb(159, 90, 0);
 	background: #fff;
+}
+/* section */
+#experts{
+	padding: 8vw 8vw 0 1vw;
+	text-align: center;
+}
+#experts .expert-box{
+	
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+	grid-gap: 1rem;
+	margin-top: 50px;
+	color: #fff;
+}
+.profile img{
+	width: 100%;
+	max-width: 250px;
+	height: auto;
+	border-radius: 100px;
+}
+.profile h6{
+	color: #fff;
+}
+#experts .expert-box .profile {
+	background: rgb(159, 90, 0);
+	padding: 30px 10px;
+	border-radius: 100px;
+}
+ .pro-links{
+	margin-top: 10px;
+}
+.pro-links i{
+	padding: 10px 13px;
+	border: 1px solid #f9f9ff;
+	cursor: pointer;
+	transition: 0.3s ease;
+}
+.pro-links i:hover{
+	background: rgb(122, 63, 1);
+	color: #fff;
+	border: 1px solid rgb(159, 90, 0);
+	cursor: pointer;
 }
