--- a/styles.css
+++ b/styles.css
@@ -295,10 +295,13 @@ nav .navigation ul li a:hover{
 	color: rgb(159, 90, 0);
 	background: #fff;
 }
-/* section */
+/* expert section */
 #experts{
 	padding: 8vw 8vw 0 1vw;
 	text-align: center;
+}
+#experts h1{
+	color:rgb(98, 50, 0);
 }
 #experts .expert-box{
 	
@@ -336,4 +339,78 @@ nav .navigation ul li a:hover{
 	color: #fff;
 	border: 1px solid rgb(159, 90, 0);
 	cursor: pointer;
+}
+#footer-main{
+	background-image:linear-gradient(rgba(71, 66, 119, 0.3), rgba(56, 56, 89, 0.7)), url("images/footerPic.jpg") ;
+	width: 100%;
+	height: 100vh;
+	background-size: cover;
+	background-position: center;
+	margin-bottom: 20px;
+	
+}
+footer{
+	padding: 8vw;
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+	flex-wrap: wrap;
+}
+footer .footer-col{
+	padding-bottom: 40px;
+}
+footer h3{
+	color:#f9f9ff;
+	font-weight: 600;
+	padding-bottom: 20px;
+}
+footer li{
+	list-style:none;
+	color:#fff;
+	padding:10px 0;
+	font-size: 15px;
+	cursor: pointer;
+	transition: 0.3s ease;
+}
+footer li:hover{
+	color: rgb(203, 134, 55);
+}
+footer p{
+	color:#f9f9ff;
+}
+footer .subscribe{
+	margin-top: 20px;
+}
+footer input{
+	width: 220px;
+	padding: 15px 12px;
+	background: rgba(179, 192, 189, 0.882);
+	border: none;
+	outline: none;
+	border-radius: 30px;
+}
+footer .subscribe a{
+	text-decoration: none;
+	font-size: 0.9rem;
+	padding: 12px 15px;
+	font-weight: 600;
+	border-radius: 30px;
+	color: #fff;
+	background-color: rgb(122, 63, 1);
+}
+footer .copyright{
+	margin-top: 20px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	flex-wrap: wrap;
+	color:#fff;
+}
+footer .copyright p{
+	color: #fff;
+}
+
+footer .copyright .pro-links{
+	margin-top: 0px;
 }
