--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,17 @@ nav img{
 	width: 125px;
 	cursor: pointer;
 }
+nav .navigation{
+	display: flex;
+}
+#menu-btn{
+	width: 50px;
+	height: 50px;
+	display: none;
+}
+#menu-close{
+	display: none;
+}
 
 nav .navigation ul{
 	display: flex;
@@ -297,8 +308,9 @@ nav .navigation ul li a:hover{
 }
 /* expert section */
 #experts{
-	padding: 8vw 8vw 0 1vw;
+	padding: 8vw 8vw 8vw 1vw;
 	text-align: center;
+	margin-left: 100px;
 }
 #experts h1{
 	color:rgb(98, 50, 0);
@@ -341,7 +353,7 @@ nav .navigation ul li a:hover{
 	cursor: pointer;
 }
 #footer-main{
-	background-image:linear-gradient(rgba(71, 66, 119, 0.3), rgba(56, 56, 89, 0.7)), url("images/footerPic.jpg") ;
+	background-image:linear-gradient(rgba(127, 120, 185, 0.3), rgba(39, 39, 52, 0.7)), url("images/footerPic.jpg") ;
 	width: 100%;
 	height: 100vh;
 	background-size: cover;
@@ -360,6 +372,7 @@ footer .footer-col{
 	padding-bottom: 40px;
 }
 footer h3{
+	font-size: 40px;
 	color:#f9f9ff;
 	font-weight: 600;
 	padding-bottom: 20px;
@@ -408,9 +421,51 @@ footer .copyright{
 	color:#fff;
 }
 footer .copyright p{
-	color: #fff;
+	margin-left: 250px;
+	margin-top: 330px;
+	display: flex;
+	align-items: center;
+		color: #fff;
 }
 
 footer .copyright .pro-links{
 	margin-top: 0px;
+}
+@media (max-width: 769px){
+	nav{
+		padding: 15px 20px
+	}
+	nav img{
+		width: 130px;
+	}
+	#menu-btn{
+		display: initial;
+	}
+	#menu-close{
+		display: initial;
+		font-size: 1.6rem;
+		color: #fff;
+		padding: 30px 0 20px 20px;
+	}
+	nav .navigation ul{
+		position: absolute;
+		top: 0;
+		right: 0;
+		width: 220px;
+		height: 100vh; 
+		background: rgba(117, 68, 0, 0.382);
+		backdrop-filter: blur(4.5px);
+		border: 1px solid #000000;
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: flex-start; 
+	}
+	nav .navigation ul li{
+		padding: 20px 0 20px 40px;
+		margin-left: 0;
+	}
+	nav .navigation ul li a{
+		color: #fff;
+	}
 }
