--- a/styles.css
+++ b/styles.css
@@ -223,8 +223,8 @@ nav .navigation ul li a:hover{
 	text-align: center;
 	border-radius: 50%;
 	position: absolute;
-	right: 15px;
-	bottom: 10px;
+	left: 100px;
+	bottom: 130px;
 }
 
 /*registration*/
@@ -450,7 +450,7 @@ footer .copyright .pro-links{
 	nav .navigation ul{
 		position: absolute;
 		top: 0;
-		right: 0;
+		right: -220px;
 		width: 220px;
 		height: 100vh; 
 		background: rgba(117, 68, 0, 0.382);
@@ -460,6 +460,10 @@ footer .copyright .pro-links{
 		flex-direction: column;
 		justify-content: flex-start;
 		align-items: flex-start; 
+		transition: 0.3s ease;
+	}
+	nav .navigation ul.active{
+		right:0;
 	}
 	nav .navigation ul li{
 		padding: 20px 0 20px 40px;
@@ -467,5 +471,29 @@ footer .copyright .pro-links{
 	}
 	nav .navigation ul li a{
 		color: #fff;
+	}
+	#home{
+		padding-top: 0px;
+	}
+	#home p{
+		width: 90%;
+	}
+	#features{
+		padding: 8vw 4vw 0 4vw;
+	}
+	#products{
+		padding: 8vw 4vw 0 4vw;
+	}
+	#registration{
+		padding: 6vw 4vw 6vw 4vw;
+	} 
+	#registration .reminder .time{
+		display:flex;
+		flex-wrap: wrap;
+		margin-top: 40px;
+	}
+	#experts{
+		padding: 8vw 8vw 4vw 8vw;
+		text-align: center;
 	}
 }
