--- a/styles.css
+++ b/styles.css
@@ -39,8 +39,8 @@ nav{
 	justify-content: space-between;
 	align-items: center;
 	padding: 1vw 8vw;
-	box-shadow: 2px 2px 10px rgba(255, 153, 0, 0.882);
-	z-index: 1090000;
+	filter: drop-shadow( 2px 2px 10px rgba(255, 153, 0, 0.882));
+	z-index: 999;
 }
 
 nav img{
@@ -77,6 +77,7 @@ nav .navigation ul li a{
 	font-weight: 500;
 	transition: 0.3s ease;
 }
+nav .navigation ul li a.active,
 nav .navigation ul li a:hover{
 	color:rgb(56, 29, 0);
 }
@@ -422,7 +423,7 @@ footer .copyright{
 }
 footer .copyright p{
 	margin-left: 250px;
-	margin-top: 330px;
+	margin-top: 150px;
 	display: flex;
 	align-items: center;
 		color: #fff;
@@ -430,6 +431,73 @@ footer .copyright p{
 
 footer .copyright .pro-links{
 	margin-top: 0px;
+}
+/*about*/
+#about-Home{
+	background-image: linear-gradient(rgb(9, 5, 54, 0.3), rgb(5, 4, 46, 0.7)), url("images/aboutUSMain\ pic.png");
+	width: 100%;
+	height: 80vh;
+	background-size: cover;
+	background-position: center; 
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	padding-top: 40px;
+}
+#about-Home p{
+	width: 50%;
+	color: #fff;
+	font-size: 0.9rem;
+	line-height: 25px;
+}
+#about-Home h2{
+	font-size: 2.2rem;
+	letter-spacing: 1px;
+	font-family: dancing-c;
+	color:#fff;
+}
+#about-container{
+	display:flex;
+	align-items: center;
+	padding: 8vw 8vw 2vw 8vw;
+}
+#about-container .about-img{
+	width: 60%;
+	padding-right: 60px;
+}
+
+#about-container .about-text{
+	width: 40%;
+}
+#about-container .about-text h2{
+	color:sienna;
+	padding-bottom: 15px;
+
+}
+#about-container .about-text p{
+	color: #000000;
+	font-weight: 300;
+}
+#about-container .about-text .about-fe{
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-start;
+	margin-top: 30px
+}
+#about-container .about-text .about-fe img{
+	width: 150px;
+	background-size: cover;
+	background-position: center;
+	margin-right: 20px;
+}
+#about-container .about-text .about-fe .fe-text{
+	width: 90%;
+}
+#about-container .about-text .about-fe .fe-text h5{
+	font-size: 16px;
+	color: sienna;
 }
 @media (max-width: 769px){
 	nav{
@@ -495,5 +563,56 @@ footer .copyright .pro-links{
 	#experts{
 		padding: 8vw 8vw 4vw 8vw;
 		text-align: center;
+		align-items: center;
+		margin-left: 12px;
 	}
+}
+
+@media(max-width:475px){
+	#registration {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+	#registration .reminder .time{
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		align-items: center;
+		margin-top: 20px;
+		margin-bottom: 20px;
+		text-align: center;
+	}
+}
+
+
+/*timer*/
+.container {
+  text-align: center;
+  font-family: sans-serif;
+}
+
+.countdown {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 50px auto;
+}
+
+.time-unit {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 10px;
+}
+
+.time-unit span:first-child {
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.time-unit span:last-child {
+  font-size: 14px;
+  color: gray;
 }
