--- a/styles.css
+++ b/styles.css
@@ -651,6 +651,25 @@ footer .copyright .pro-links{
 	color: white;
 	background-color: rgb(98, 50, 0);
 }
+#contact-home{
+	background-image: linear-gradient(rgb(9, 5, 54, 0.3), rgb(5, 4, 46, 0.7)), url("images/contactMainPic.jpg");
+	width: 100%;
+	height: 80vh;
+	background-size: cover;
+	background-position: center; 
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	padding-top: 40px;
+}
+#contact-home h2{
+	font-size: 2.2rem;
+	letter-spacing: 1px;
+	font-family: dancing-c;
+	color:#fff;
+}
 
 #products-Home-whoopie{
 	background-image: linear-gradient(rgb(9, 5, 54, 0.3), rgb(5, 4, 46, 0.7)), url("images/whoopiePieMainPic.jpg");
@@ -746,6 +765,129 @@ footer .copyright .pro-links{
 	letter-spacing: 1px;
 	font-family: dancing-c;
 	color:#fff;
+}
+/*contact */
+#contact{
+	padding: 8vw;
+	display: flex;
+	justify-content: space-between;
+	justify-content: space-between;
+	align-items: flex-start;
+}
+#contact .getin{
+	width: 350px;
+}
+#contact .getin h2{
+	color:rgb(98, 50, 0);
+	font-size: 30px;
+	font-weight: 800;
+	line-height: .8;
+	margin-bottom: 16px;
+}
+#contact .getin p{
+	color: black;
+	line-height: 24px;
+	margin-bottom: 33px;
+	padding-bottom: 25px;
+	border-bottom: rgb(122, 63, 1);
+}
+#contact .getin h3{
+	color: rgb(98, 50, 0);
+	line-height: 15px;
+	font-weight: 600;
+	line-height: 26px;
+	margin-bottom: 15px;
+}
+#contact .getin .getin-details div{
+	display: flex;
+}
+#contact .getin .getin-details div .get{
+	font-size: 16px;
+	line-height: 22px;
+	color:rgb(98, 50, 0);
+	margin-right: 20px;
+}
+#contact .getin .getin-details div .pro-links i{
+	margin-right: 8px;
+
+}
+#contact .form{
+	width: 60%;
+	background: #f7f6fa;
+	padding: 40px;
+	border-radius: 10px;
+}
+#contact .form h4{
+	font-size: 24px;
+	color:rgb(98, 50, 0);
+	line-height: 30px;
+	margin-bottom: 8px;
+}
+#contact .form p{
+	color: black;
+	line-height: 24px;
+	padding-bottom: 25px;
+}
+#contact .form .form-row{
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+}
+#contact .form .form-row input{
+	width: 48%;
+	font-size: 14px;
+	font-weight: 400;
+	border-radius: 10px;
+	border: none;
+	background: #fff;
+	color:rgb(98, 50, 0);
+	outline: none;
+	padding: 20px 30px;
+	margin-bottom: 20px;
+}
+#contact .form .form-col input{
+	width: 100%;
+	font-size: 14px;
+	font-weight: 400;
+	border-radius: 10px;
+	border: none;
+	background: #fff;
+	color:rgb(98, 50, 0);
+	outline: none;
+	padding: 20px 30px;
+	margin-bottom: 20px;
+}
+#contact .form .form-col textarea{
+	width: 100%;
+	font-size: 14px;
+	font-weight: 400;
+	border-radius: 10px;
+	border: none;
+	background: #fff;
+	color:rgb(98, 50, 0);
+	outline: none;
+	padding: 20px 30px;
+	margin-bottom: 20px;
+}
+#contact .form button{
+	font-size: .9rem;
+	padding: 13px 25px;
+	background:rgb(98, 50, 0);
+	border-radius: 15px;
+	outline: none;
+	font-weight: 600;
+	border:none;
+	cursor: pointer;
+	color: #fff;
+}
+#map{
+	width: 100%;
+	height: 70vh;
+	margin-bottom: 8vw;
+}
+#map iframe{
+	width: 100%;
+	height: 100%;
 }
 @media (max-width: 769px){
 	nav{
@@ -853,6 +995,14 @@ footer .copyright .pro-links{
 	#products-inner .overview .products-head span {
     font-size: 22px;
 	}
+	/*contact*/
+	#contact {
+    padding: 8vw 4vw;
+	}
+	#contact .getin{
+		width: 250px;
+	}
+	
 }
 
 @media(max-width:475px){
@@ -902,6 +1052,30 @@ footer .copyright .pro-links{
 			width: 60px;
 			margin: 10px 15px;
 			height: auto;
+		}
+		/*contact*/
+		#contact {
+			padding: 8vw 4vw;
+			flex-direction: column;
+			align-content: flex-start;
+			justify-content: flex-start;
+		}
+		#contact .getin{
+			width: 100%;
+			margin-bottom: 13px;
+		}
+		#contact .form{
+			width: 100%;
+			padding: 40px 30px;
+		}
+		#contact .form .form-row{
+			display: flex;
+			flex-direction: column;
+			justify-content: flex-start;
+			width: 100%;
+		}
+		#contact .form .form-row input{
+			width: 100%;
 		}
 }
 
